--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -3,12 +3,13 @@
     x:Class="SSFR_Movies.Views.MovieDetailsPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Visual="Material"
     xmlns:local="clr-namespace:SSFR_Movies.Converters"
     xmlns:HybridWebview="clr-namespace:SSFR_Movies.CustomRenderers"
     xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
     Title="Details"
-    BackgroundColor="#006FDE">
+    BackgroundColor="#0066cc">
 
     <ContentPage.Resources>
         <ResourceDictionary Source="/ResourceDictionaries/GenResourceDictionary.xaml" />
@@ -32,7 +33,6 @@
                     VerticalOptions="FillAndExpand">
                     <Frame 
                         x:Name="frame"
-                        
                         BackgroundColor="#00103B"
                         HeightRequest="300"
                         CornerRadius="5"
@@ -65,7 +65,7 @@
                                 AbsoluteLayout.LayoutBounds="0, 1, 1, 0.4"
                                 AbsoluteLayout.LayoutFlags="All"
                                 BackgroundColor="#44312D2D"
-                                HeightRequest="200"
+                                HeightRequest="230"
                                 HorizontalOptions="FillAndExpand"
                                 WidthRequest="{Binding Source={x:Reference frame}, Path=WidthRequest}">
                                 <Grid>
@@ -174,7 +174,7 @@
                  
                         </AbsoluteLayout>
                     </Frame>
-                    <StackLayout BackgroundColor="#006FDE" HorizontalOptions="FillAndExpand">
+                    <StackLayout BackgroundColor="#0066cc" HorizontalOptions="FillAndExpand">
                         <StackLayout Orientation="Horizontal">
                             <Label
                                 Margin="16,5,16,0"
@@ -225,8 +225,7 @@
                         <Button
                             x:Name="AddToFavLayout"
                             Margin="16"
-                            Visual="Material"
-                            BackgroundColor="#44FFFFFF"
+                            BackgroundColor="#006FDE"
                             HorizontalOptions="FillAndExpand"
                             CornerRadius="30"
                             FontAttributes="Bold"
@@ -237,7 +236,6 @@
                         <Button 
                             x:Name="QuitFromFavLayout"
                             Margin="16"
-                            Visual="Material"
                             BackgroundColor="#FF0000"
                             FontAttributes="Bold"
                             FontSize="Medium"
