--- a/SSFR_Movies/SSFR_Movies/Views/SearchPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/SearchPage.xaml
@@ -4,7 +4,7 @@
     x:Class="SSFR_Movies.Views.SearchPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:vm="clr-namespace:SSFR_Movies.ViewModels"
+    Visual="Material"
     xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
     BackgroundColor="#161513">
     <ContentPage.Content>
@@ -47,8 +47,8 @@
 
             <ActivityIndicator
                 x:Name="activityIndicator"
-                BackgroundColor="Transparent"
                 HeightRequest="40"
+                BackgroundColor="#004b96"
                 VerticalOptions="CenterAndExpand"
                 HorizontalOptions="CenterAndExpand"
                 WidthRequest="40"
