--- a/SSFR_Movies/SSFR_Movies/Views/StartPagexaml.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/StartPagexaml.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              NavigationPage.HasNavigationBar="False"
+             Visual="Material"
              BackgroundColor="Black"
              x:Class="SSFR_Movies.Views.StartPagexaml">
     <ContentPage.Content>
@@ -9,6 +10,7 @@
             <ActivityIndicator
                 x:Name="ActIndicator"
                 Color="#006FDE"
+                BackgroundColor="White"
                 Visual="Material"
                 IsVisible="True"
                 IsRunning="True"
@@ -33,7 +35,7 @@
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
-                <ProgressBar x:Name="ProBar" Margin="5, 16, 5, 0" ProgressColor="#006FDE" Progress=".2"/>
+                <ProgressBar x:Name="ProBar" Margin="5, 16, 5, 0" ProgressColor="#006FDE" BackgroundColor="White" Progress=".2"/>
             </StackLayout>
            
         </StackLayout>
