--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -228,6 +228,7 @@
                         <Button
                             x:Name="AddToFavLayout"
                             Margin="16"
+                            Visual="Material"
                             BackgroundColor="#44FFFFFF"
                             HorizontalOptions="FillAndExpand"
                             CornerRadius="30"
@@ -239,6 +240,7 @@
                         <Button 
                             x:Name="QuitFromFavLayout"
                             Margin="16"
+                            Visual="Material"
                             BackgroundColor="#FF0000"
                             FontAttributes="Bold"
                             FontSize="Medium"
