--- a/SSFR_Movies/SSFR_Movies/Views/AppShell.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AppShell.xaml
@@ -33,12 +33,12 @@
                 <local:AllMoviesPage/>
             </ShellContent>
         </ShellSection>
-        <ShellSection Title="Favorites" Route="favorites" Icon="Heart.png" >
+        <ShellSection IsEnabled="{Binding Enabled}" Title="Favorites" Route="favorites" Icon="Heart.png" >
             <ShellContent>
                 <local:FavoritesMoviesPage/>
             </ShellContent>
         </ShellSection>
-        <ShellSection Title="About" Route="about" Icon="About.png">
+        <ShellSection IsEnabled="{Binding Enabled}" Title="About" Route="about" Icon="About.png">
             <ShellContent ContentTemplate="{DataTemplate local:About}"/>
         </ShellSection>
     </ShellItem>
