--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -8,6 +8,7 @@
     xmlns:HybridWebview="clr-namespace:SSFR_Movies.CustomRenderers"
     xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
+    xmlns:sharedTransitions="clr-namespace:Plugin.SharedTransitions;assembly=Plugin.SharedTransitions"
     Title="Details"
     BackgroundColor="#0066cc">
 
@@ -161,6 +162,7 @@
                                 AbsoluteLayout.LayoutBounds="0, 0.6, 0.5, 0.6"
                                 AbsoluteLayout.LayoutFlags="All"
                                 x:Name="PosterPathImage"
+                                sharedTransitions:Transition.Tag="1"
                                 CacheType="All"
                                 Margin="8,0,8,0"
                                 Source="{Binding PosterPath, Converter={StaticResource PosterConverter}}"
