--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -66,7 +66,7 @@
                                 AbsoluteLayout.LayoutFlags="All">
                                 <Frame
                                     x:Name="theFrame"
-                                    BackgroundColor="Black"
+                                    BackgroundColor="#44161513"
                                     HasShadow="True"
                                     CornerRadius="12"
                                     HeightRequest="280"
