--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage
     x:Class="SSFR_Movies.Views.AllMoviesPage"
-    x:Name="Content"
+    x:Name="content"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
@@ -277,7 +277,7 @@
                         BackgroundColor="#004b96"
                         Color="#FFF" />
 
-                    <CollectionView x:Name="MoviesList" IsVisible="{Binding ListVisible}" SelectionMode="Single" SelectionChanged="MovieSelected" ItemsSource="{Binding AllMoviesList.Value}" WidthRequest="{Binding Source={x:Reference Content}, Path= WidthRequest}">
+                    <CollectionView x:Name="MoviesList" IsVisible="{Binding ListVisible}" SelectionMode="Single" SelectionChanged="MovieSelected" ItemsSource="{Binding AllMoviesList.Value}" WidthRequest="{Binding Source={x:Reference content}, Path= WidthRequest}">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
                                 <StackLayout CompressedLayout.IsHeadless="True">
